<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>
    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>
    <string name="quantity_word">Quantity</string>
    <string name="value">0</string>
    <string name="button_title">order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order_summary">Order summary</string>
    <string name="price_value">$0</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">chocolate</string>
    <string name="Quantity">Quantity</string>
    <string name="Total">Total</string>
    <string name="Name">Name</string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>

    <!--
  Whipped cream topping for the order summary. It will be shown in the format of
  "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
-->
    <string name="Add_whipped_cream">Add whipped cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>

    <!--
     Chocolate topping for the order summary. It will be shown in the format of
     "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
   -->
    <string name="Add_chocolate_topping">Add chocolate topping? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g example="2" id="quantity">%d</xliff:g></string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="Thank_you">Thank you!</string>

    <!--
   Subject line for the order summary email. It will be in the format of
   "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
 -->
    <string name="JustJava_order_for">Just Java for <xliff:g example="Amy" id="name">%s</xliff:g></string>
</resources>

